# cjhx-skill-hub

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  aa.md  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml
apps/api-server/: README.md  alembic.ini  pyproject.toml
apps/api-server/alembic/: README  env.py
apps/api-server/alembic/versions/: 0001_enable_extensions.py  0002_create_auth_tables.py  0003_create_taxonomy_tables.py  0004_create_file_assets.py  0005_create_skill_tables.py  0006_create_skill_versions.py  0007_create_reviews_and_logs.py  0008_create_indexes_and_triggers.py  0009_seed_initial_data.py  0010_add_audit_request_id.py  0011_add_likes_and_usage_guides.py  0012_add_permissions_and_custom_roles.py  0013_add_skill_grants_and_ops_views.py  0014_expand_skill_grant_scopes.py  0015_add_users_primary_department.py  0016_departments_table_and_user_fk.py
apps/api-server/app/: main.py
apps/api-server/app/api/: deps.py  router.py
apps/api-server/app/core/: __init__.py  config.py  database.py  logging.py  rate_limit.py  redis.py  request_context.py  security.py
apps/api-server/app/db/: __init__.py  base.py
apps/api-server/app/models/: __init__.py  audit_log.py  category.py  department.py  download_log.py  favorite.py  file_asset.py  permission.py  refresh_token.py  role.py  role_permission.py  skill.py  tag.py  (+8 more)
apps/api-server/scripts/: seed_local_workbench_data.py
apps/api-server/tests/: __init__.py  conftest.py  test_production_features.py  test_skill_lists.py  test_skill_workflow.py  test_sso_gateway_decode.py
(+199 files in other folders)
